# aws-photo-uploader

./: Cargo.toml  README.md  config.ini.example  tests.md
.github/workflows/: build.yml
src/: main.rs
